# ai-website-generator

./: .env  .env-example  .gitignore  Procfile  README.md  pyproject.toml  requirements.txt  template.py
api/: app.py  generator_creator.py  redis_db.py
core/: llm_chain.py
core/models/: website.py
templates/: basic-template.json
